--- a/package.json
+++ b/package.json
@@ -3,24 +3,48 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "analyze": "cross-env ANALYZE=true npm run build",
+    "db:generate": "drizzle-kit generate:pg",
+    "db:migrate": "dotenv -c -- tsx ./src/drizzle/migrate.ts",
+    "db:studio": "dotenv -c -- drizzle-kit studio"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.3"
+    "@clerk/localizations": "^2.3.0",
+    "@clerk/nextjs": "^5.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@t3-oss/env-nextjs": "^0.10.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "drizzle-orm": "^0.30.10",
+    "lucide-react": "^0.378.0",
+    "next": "14.2.3",
+    "next-intl": "^3.12.2",
+    "pg": "^8.11.5",
+    "postgres": "^3.4.4",
+    "react": "~18.2.0",
+    "react-dom": "~18.2.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.6"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@next/bundle-analyzer": "^14.2.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "cross-env": "^7.0.3",
+    "dotenv-cli": "^7.4.2",
+    "drizzle-kit": "^0.20.17",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
+    "jiti": "^1.21.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "tsx": "^4.9.3",
+    "typescript": "^5"
   }
 }
