--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "analyze": "cross-env ANALYZE=true npm run build",
     "db:generate": "drizzle-kit generate:pg",
     "db:migrate": "dotenv -c -- tsx ./src/drizzle/migrate.ts",
-    "db:studio": "dotenv -c -- drizzle-kit studio"
+    "db:studio": "dotenv -c -- drizzle-kit studio",
+    "storybook": "storybook dev -p 6006",
+    "storybook:build": "storybook build",
+    "storybook:serve": "http-server storybook-static --port 6006 --silent"
   },
   "dependencies": {
     "@clerk/localizations": "^2.3.0",
@@ -32,7 +35,18 @@
     "zod": "^3.23.6"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^1.3.5",
     "@next/bundle-analyzer": "^14.2.3",
+    "@storybook/addon-essentials": "^8.0.10",
+    "@storybook/addon-interactions": "^8.0.10",
+    "@storybook/addon-links": "^8.0.10",
+    "@storybook/addon-onboarding": "^8.0.10",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/addon-styling-webpack": "^1.0.0",
+    "@storybook/blocks": "^8.0.10",
+    "@storybook/nextjs": "^8.0.10",
+    "@storybook/react": "^8.0.10",
+    "@storybook/test": "^8.0.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -41,8 +55,12 @@
     "drizzle-kit": "^0.20.17",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "eslint-plugin-storybook": "^0.8.0",
+    "http-server": "^14.1.1",
     "jiti": "^1.21.0",
     "postcss": "^8",
+    "react-docgen-typescript-plugin": "^1.0.6",
+    "storybook": "^8.0.10",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.9.3",
     "typescript": "^5"
