--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "analyze": "cross-env ANALYZE=true npm run build",
-    "db:generate": "drizzle-kit generate:pg",
+    "db:generate": "drizzle-kit generate",
     "db:migrate": "dotenv -c -- tsx ./src/drizzle/migrate.ts",
-    "db:studio": "dotenv -c -- drizzle-kit studio",
+    "db:studio": "dotenv -c -- drizzle-kit studio --verbose",
     "storybook": "storybook dev -p 6006",
     "storybook:build": "storybook build",
-    "storybook:serve": "http-server storybook-static --port 6006 --silent"
+    "storybook:serve": "http-server storybook-static --port 6006 --silent",
+    "test": "jest"
   },
   "dependencies": {
     "@clerk/localizations": "^2.3.0",
@@ -47,21 +48,33 @@
     "@storybook/nextjs": "^8.0.10",
     "@storybook/react": "^8.0.10",
     "@storybook/test": "^8.0.10",
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^15.0.7",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "cross-env": "^7.0.3",
     "dotenv-cli": "^7.4.2",
-    "drizzle-kit": "^0.20.17",
+    "drizzle-kit": "^0.21.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "eslint-plugin-jest": "^28.5.0",
+    "eslint-plugin-jest-dom": "^5.4.0",
+    "eslint-plugin-jest-formatting": "^3.1.0",
     "eslint-plugin-storybook": "^0.8.0",
+    "eslint-plugin-testing-library": "^6.2.2",
     "http-server": "^14.1.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-fail-on-console": "^3.3.0",
     "jiti": "^1.21.0",
     "postcss": "^8",
     "react-docgen-typescript-plugin": "^1.0.6",
     "storybook": "^8.0.10",
     "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.1.3",
+    "ts-node": "^10.9.2",
     "tsx": "^4.9.3",
     "typescript": "^5"
   }
