--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "storybook": "storybook dev -p 6006",
     "storybook:build": "storybook build",
     "storybook:serve": "http-server storybook-static --port 6006 --silent",
-    "test": "jest"
+    "test": "jest",
+    "email": "email dev --dir src/emails --port 5000"
   },
   "dependencies": {
     "@clerk/localizations": "^2.3.0",
     "@clerk/nextjs": "^5.0.6",
     "@radix-ui/react-icons": "^1.3.0",
+    "@react-email/components": "0.0.19",
     "@t3-oss/env-nextjs": "^0.10.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -31,6 +33,8 @@
     "postgres": "^3.4.4",
     "react": "~18.2.0",
     "react-dom": "~18.2.0",
+    "react-email": "2.1.1",
+    "resend": "^3.2.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.6"
