--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@clerk/nextjs": "^5.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@react-email/components": "0.0.19",
+    "@sentry/nextjs": "^8.4.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
