--- a/package.json
+++ b/package.json
@@ -20,25 +20,42 @@
   "dependencies": {
     "@clerk/localizations": "^2.3.0",
     "@clerk/nextjs": "^5.0.6",
+    "@hookform/resolvers": "^3.4.2",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toggle": "^1.0.3",
+    "@radix-ui/react-toggle-group": "^1.0.4",
     "@react-email/components": "0.0.19",
     "@sentry/nextjs": "^8.4.0",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@types/dompurify": "^3.0.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dompurify": "^3.1.4",
     "drizzle-orm": "^0.30.10",
+    "embla-carousel-react": "^8.1.3",
+    "framer-motion": "^11.2.6",
+    "i": "^0.3.7",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "next-intl": "^3.12.2",
+    "next-themes": "^0.3.0",
+    "npm": "^10.8.0",
     "pg": "^8.11.5",
     "postgres": "^3.4.4",
     "react": "~18.2.0",
     "react-dom": "~18.2.0",
     "react-email": "2.1.1",
+    "react-hook-form": "^7.51.5",
     "resend": "^3.2.0",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.6"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.3.5",
@@ -79,6 +96,7 @@
     "react-docgen-typescript-plugin": "^1.0.6",
     "storybook": "^8.0.10",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
     "ts-jest": "^29.1.3",
     "ts-node": "^10.9.2",
     "tsx": "^4.9.3",
