feat: Add attachment upload.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "dotenv -c -- tsx ./src/drizzle/migrate.ts",
     "db:studio": "dotenv -c -- drizzle-kit studio --verbose",
+    "db:push": "dotenv -c -- drizzle-kit push",
     "storybook": "storybook dev -p 6006",
     "storybook:build": "storybook build",
     "storybook:serve": "http-server storybook-static --port 6006 --silent",
@@ -47,6 +48,7 @@
     "@sentry/nextjs": "^8.4.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@types/dompurify": "^3.0.5",
+    "@uploadthing/react": "^7.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -55,7 +57,7 @@
     "drizzle-zod": "^0.5.1",
     "embla-carousel-react": "^8.1.3",
     "framer-motion": "^11.2.6",
-    "i": "^0.3.7",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "next-intl": "^3.12.2",
@@ -67,9 +69,13 @@
     "react-dom": "~18.2.0",
     "react-email": "2.1.1",
     "react-hook-form": "^7.51.5",
+    "react-photo-album": "^3.0.2",
     "resend": "^3.2.0",
     "sanitize-html": "^2.13.0",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^2.3.0",
+    "uploadthing": "^7.0.2",
+    "uuid": "^10.0.0",
     "zod": "^3.23.8",
     "zsa": "^0.5.0",
     "zsa-react": "^0.2.1",
@@ -92,10 +98,12 @@
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.7",
     "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.17.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/sanitize-html": "^2.11.0",
+    "@types/uuid": "^10.0.0",
     "cross-env": "^7.0.3",
     "dotenv-cli": "^7.4.2",
     "drizzle-kit": "^0.21.1",
